--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "type": "git",
     "url": "git+{{ tmplr.repo_url }}"
   },
-  "keywords": [
-  ],
+  "keywords": [],
   "author": "{{ tmplr.package_author }}",
   "license": "MIT",
   "bugs": {
@@ -45,7 +44,7 @@
     "eslint": "^8.45.0",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
-    "ts-inference-check": "^0.2.1",
+    "ts-inference-check": "^0.2.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tslib": "^2.6.0",
